# human-readable-id

./: README.md  pyproject.toml  setup.py
hrid/: __init__.py  hrid.py
hrid/word_lists/: nice.py  nice_adjectives.py  nice_adverbs.py  nice_nouns.py  nice_verbs.py
tests/: tests.py
