[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hrid"
version = "0.4.0"
description = "Human readable ID generator for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Minh Minh", email = "hnimminh@outlook.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/hnimminh/human-readable-id"
Repository = "https://github.com/hnimminh/human-readable-id"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["hrid"]
